# ChangeLog for dev-ruby/serialport
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/serialport/ChangeLog,v 1.10 2013/11/26 01:46:08 mrueg Exp $

*serialport-1.3.0 (26 Nov 2013)

  26 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +serialport-1.3.0.ebuild,
  -serialport-1.2.1.ebuild:
  Version bump.

*serialport-1.2.3 (05 Nov 2013)

  05 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +serialport-1.2.3.ebuild:
  Version bump.

*serialport-1.2.1 (26 Oct 2013)

  26 Oct 2013; Hans de Graaff <graaff@gentoo.org> +serialport-1.2.1.ebuild:
  Version bump.

  09 Nov 2012; Agostino Sarubbo <ago@gentoo.org> serialport-1.1.0.ebuild:
  Add ~amd64, wrt bug #442128

  28 Sep 2012; Hans de Graaff <graaff@gentoo.org> -serialport-1.0.3.ebuild:
  Cleanup.

  27 Sep 2012; Johannes Huber <johu@gentoo.org> serialport-1.1.0.ebuild:
  Stable for x86, wrt bug #435962

  23 Sep 2012; Hans de Graaff <graaff@gentoo.org> -serialport-1.0.4.ebuild:
  Cleanup.

*serialport-1.1.0 (06 Jun 2012)

  06 Jun 2012; Hans de Graaff <graaff@gentoo.org> +serialport-1.1.0.ebuild:
  Version bump.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> serialport-1.0.3.ebuild,
  serialport-1.0.4.ebuild:
  Drop ia64/sparc keywords

*serialport-1.0.4 (13 Mar 2011)
*serialport-1.0.3 (13 Mar 2011)

  13 Mar 2011; Hans de Graaff <graaff@gentoo.org> +serialport-1.0.3.ebuild,
  +serialport-1.0.4.ebuild, +metadata.xml:
  pkgmove ruby-serialport to serialport to match upstream name.

  27 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  -ruby-serialport-1.0.3-r1.ebuild:
  Remove old version.

*ruby-serialport-1.0.4 (01 Aug 2010)

  01 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-serialport-1.0.4.ebuild:
  Version bump.

  07 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  ruby-serialport-1.0.3.ebuild, ruby-serialport-1.0.3-r1.ebuild:
  install examples in the right place.

  24 May 2010; Hans de Graaff <graaff@gentoo.org>