@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST serialport-1.1.0.gem 23552 SHA256 bfecc6462b721eb07817739ab8ae913b90ca567b16334c9893e8643ece8d234b SHA512 6092fe12725b7a75a26c06414dd9d3368797b07060d5271138eeb6657a6d0c967f356036787e11b83e8b8a30a1ab75125edee55593710cf7ab2ab16c2cb9b42a WHIRLPOOL 4c6bb5a9a47bdfdaffec8e91ef621f9df9ca48fd07f1e8cf61527e211af86d4428f1b86570344e994cbb07aecca881058a8dab3317774c79043380bf39f9be7d
 DIST serialport-1.2.3.gem 24576 SHA256 c85cdf74cecabe7a80a43e4b5a5270029d8969f06528f7b51ed34d5d08c50492 SHA512 09b542bbef10b5c695bc73cd83236caf701f83da8e73578484510509e3cd714eb4916826ba5435245c19d3e59da9cb5772ba1383a121def6af7f994815a06006 WHIRLPOOL ad7e09cf40ceaf7548ff801e0bd77ee93167f9d54edadc013d609b0bf8957b5c652ad5159cd98ac16a797fab26ece8945bac2337e5690836ecb32662ddab0edb
 DIST serialport-1.3.0.gem 25088 SHA256 39bd909a3b159e70070dd24e6948bb7620fcb1fb066d26fc55aab2ae1037f21a SHA512 7555f5125a031de4467c4bf5312e31be021265398ed22d2a6089232faa904aa8de0accd092fbe5f74aeba16d8bf37529014ac148d2fdd45d0e43f11bba7ec94d WHIRLPOOL 5b730cf11263130f222d072354003a16dc83374ffbeedfed8a48f04836447b3fb331eb07d0777f3894bc6f27a9d262af7eaeeb572dc7fb880fcd0304cfcefb42
 EBUILD serialport-1.1.0.ebuild 1177 SHA256 e8adaa37d01240e540827803af0d7cccb5be7e9b7b5761bbc0cc12ff82b07e63 SHA512 a59dbbc35cd7729d6600249d80735d979838b4d4663906e8b63dd1b89f271602b214246c20bd49f7e3d34f4f7c1835a828d7a18e77efbe40f8f81db720197e44 WHIRLPOOL b215ff7f86e7a1cc9321c0e7d9aa6fe6202bc990e76535048bb4c830fe2f2b634d93a2f557aa2505f656b3e57b9a349bf30df4c6391c7103cb66a180edfcb71c
 EBUILD serialport-1.2.3.ebuild 1179 SHA256 895dcc04eb53699d9fdeff99646eaf1dcdd593fd1872ff779013d1e75b9e6328 SHA512 3d640c9eb61944d6d04cd210a89a753a23c5af061211c3b04c10655ff2bb3775e19bc2b22f221555feb6a4ac2957ad5c1d283a4da16f5a41d9f9bc26359598b6 WHIRLPOOL f4e34ecc8c7def21bd4b80f7d07f303832e1f8c3cbd28b450f5449f9a4bded5111f8c0e65e6c9ee050a09595d615b953566c559e8317fd9d633b6d6978094558
-EBUILD serialport-1.3.0.ebuild 1199 SHA256 301dfa77bd5225c94b4d1a07422e807e6911529c9a10930ec57f8ecaa9dd2cc2 SHA512 578a0834f19bb6d62fe8f46f97c8b4fe608ba21513c311b035703a2e77331f54f5d8170a137b6e54cacac5605b60b923df98dcb728ae02f5641494799de09484 WHIRLPOOL d193bf407fc35e2a06013e862a72b68f9200830eefbf4f15cd554b14b6b029799a72386e0ffa3557da989fb99d9d30b43cdbd9a8802820c40e07814cbc5889f0
-MISC ChangeLog 4179 SHA256 db6be0f7092c49e6e5207f76069730f70d8b9fa35d8e40ed6caa3f2e094ba4ae SHA512 87727970ab85201452d2636225c56df462a89ff5cb694848f1aa79ae9151e0d78dacb09d6bae8d3b9baefbeb6be94d43f601b5d92fc8521a9f5619f2e845a8e4 WHIRLPOOL fd1910514d8fbee4cb38f43dc99e634b5c89d6ebee46a1d56ad68ffe43c35af8d4e8c4920a5d4b101d4f5791448ef83f4825099ff6c7523e0db6f26fea69ff9c
+EBUILD serialport-1.3.0.ebuild 1198 SHA256 8c96743f0fe31ae80dea2cb9d26fb12566af5659985fb4eb0f32188537a80ca2 SHA512 47d0a38a607226c985260328b47042f78a2512b7ea9691512c2aba956146ea4b96ad7e6c136aa3e434feb6eb8660f0d70bc276b036891343f98151a7d2ebe587 WHIRLPOOL 5236c8acf789343ebce9425d6d23fb6e173f56849251c15d87fbe1b812202d5bfa078deb6ddbc5351ddda3432cab73494ef9126ea07e56a2ab40fb570180569b
+MISC ChangeLog 4279 SHA256 1f60d819ff6d50d21e50c31d85e7fc9fb0c316e5232497adce23ab75624583e0 SHA512 f2c835e838c90ef1fff82d12abe1ee7d34a2378560948266ae5b25ed32c5ff0d96b35a457594503a5b4a7d13ebe45ef55f64455bd17728f663109c8bf16f56e3 WHIRLPOOL 0c4b1ff33af19f5c9ec11041c2804fdcb1418d33881ef9ef6c3cedd4244d4b1e6421c7e93a1201200bfb56a57c5e33c7ffea101064af3e459ee39358c21bc721
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlMaWgkACgkQCaWpQKGI+9Tt2ACeJe0SBHwpbxGwghSzPZfl1Ksd
+VaEAnjoHvd0nOXW2XB28HkK66hfeDPiZ
+=E6Zb
+-----END PGP SIGNATURE-----
