@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/serialport/serialport-1.3.0.ebuild,v 1.1 2013/11/26 01:46:08 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/serialport/serialport-1.3.0.ebuild,v 1.2 2014/03/07 23:45:12 pacho Exp $
 
 EAPI=5
 
@@ -18,7 +18,7 @@ HOMEPAGE="http://rubyforge.org/projects/ruby-serialport/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="amd64 ~ppc ~x86"
 IUSE=""
 
 all_ruby_prepare() {
